# journal-app-v2

./: .gitignore  AI-Journal-PRD.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test.html
data/: journal.db-shm  journal.db-wal
python-rag-service/: README.md  main.py  requirements.txt  setup.sh
sidecar/: .gitignore  db.py  llm.py  rag.py  requirements.txt  server.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs  rag.rs
src/components/: ChatBubble.tsx  EntryCard.tsx  Layout.tsx  Sidebar.tsx
src/lib/: api.ts  store.ts
src/pages/: Chat.tsx  Editor.tsx  Reader.tsx  Search.tsx  Settings.tsx  Timeline.tsx
